nivasa-macros/tests/trybuild/validation_array_max_size_invalid.rs
use nivasa_macros::Dto;

#[derive(Dto)]
struct TagListForm {
    #[array_max_size(3)]
    tags: bool,
}

fn main() {}
